# rust-practical-sessions

./: README.md
01-grpc-server/: .env  Cargo.toml  README.md  build.rs  sqlx-data.json
01-grpc-server/migrations/: 20201214094417_01-start.sql
01-grpc-server/proto/: rpts01.proto
01-grpc-server/src/: data.rs  main.rs  proto.rs  service.rs
02-rest-api/: .env  Cargo.toml  Makefile.toml  README.md  docker-compose.yml  my-postgres.conf
02-rest-api/assets/: postman.json  schema.sql
02-rest-api/migrations/: 20201212224537_01-start.sql
02-rest-api/src/: health.rs  macros.rs  main.rs  models.rs
02-rest-api/src/v1/: handlers.rs  mod.rs  repository.rs  service.rs
