[package]
name = "rpts01"
version = "0.1.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2.0"
prost = "0.6.1"
tokio = { version = "0.2.14", features = ["macros"]}

[build-dependencies]
tonic-build = "0.2"
