[package]
name = "rpts01"
version = "0.1.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3.0"
prost = "0.6.1"
tokio = { version = "0.2.22", features = ["macros"]}

sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "postgres", "uuid", "json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "0.8.1"
prost-types = "0.6.1"

anyhow = "1.0"
dotenv = "0.15.0"
# chrono = "0.4"


[build-dependencies]
tonic-build = "0.3"
