[package]
name = "rpts02"
version = "0.1.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# server
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-cors = "0.5.3"
actix-web-middleware-cognito = "0.3.0"
futures = "0.3.8"
# observability: logs, distributed tracing and metrics
actix-web-prom = "0.5.0"
tracing = "0.1.22"
tracing-futures = { version = "0.2.4", features = ["tokio"] }
tracing-subscriber = "0.2.15"
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# utils
dotenv = "0.15.0"
async-trait = "0.1.42"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = [ "v4", "serde"] }
# database
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "json", "offline" ] }
# errors
thiserror = "1.0.22"

[dev-dependencies]
mockall = "0.8.3"
